we are ready for the first release